# Chronos

./: CMakeLists.txt  README.md
icons/: app_icon.rc  ressources.qrc
src/: CMakeLists.txt  bookmark.cpp  bookmark.h  download.cpp  download.h  history.cpp  history.h  main.cpp  mainwindow.cpp  mainwindow.h  setting.cpp  setting.h
